[gd_scene load_steps=7 format=3 uid="uid://c5enivskelk3f"]

[ext_resource type="PackedScene" uid="uid://bsttj07uh4amy" path="res://scenes/enemies/base_enemy.tscn" id="1_w467i"]
[ext_resource type="Script" uid="uid://dy8ht5vbfhkn5" path="res://scripts/enemies/charge_enemy.gd" id="2_xkf83"]
[ext_resource type="PackedScene" uid="uid://dvumfkhw1clye" path="res://scenes/laser.tscn" id="3_5jdr2"]
[ext_resource type="PackedScene" uid="uid://g3d6otker7yj" path="res://scenes/enemies/enemy_asset/laser_canon.tscn" id="3_xkf83"]
[ext_resource type="PackedScene" uid="uid://pug080u7rka1" path="res://scenes/bullet.tscn" id="4_1xaef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xaef"]
size = Vector2(386, 10)

[node name="Enemy" instance=ExtResource("1_w467i")]
script = ExtResource("2_xkf83")
laser = ExtResource("3_5jdr2")
bullet = ExtResource("4_1xaef")

[node name="LaserCanon" parent="." index="3" instance=ExtResource("3_xkf83")]

[node name="Area2D" type="Area2D" parent="LaserCanon" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserCanon/Area2D" index="0"]
position = Vector2(233, 0)
shape = SubResource("RectangleShape2D_1xaef")

[connection signal="body_entered" from="LaserCanon/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="LaserCanon/Area2D" to="." method="_on_area_2d_body_exited"]
